# gauss_jordan

./: .gitignore  CMakeLists.txt  README.md  fp_comp.c  fp_comp.h  gauss_jordan_elimination_algorithm.c  gauss_jordan_elimination_algorithm.h  main.c  my_logging.c  my_logging.h  my_ptr_unchained.c  my_ptr_unchained.h
